<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".payment">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="229dp"
        android:layout_height="56dp"
        android:text="@string/card_details"
        android:textColor="@color/purple_500"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068" />

    <EditText
        android:id="@+id/rvCardHolderName"
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:drawableStart="@drawable/ic_baseline_account_circle_24"
        android:ems="10"
        android:hint="@string/card_holder_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,TextContrastCheck"
        tools:layout_editor_absoluteX="14dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/rvCardNumber"
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_baseline_credit_card_24"
        android:ems="10"
        android:hint="@string/card_number"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/rvCardHolderName"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck"
        tools:layout_editor_absoluteX="14dp" />

    <EditText
        android:id="@+id/rvExpireDate"
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:drawableStart="@drawable/ic_baseline_date_range_24"
        android:ems="10"
        android:hint="@string/expire_date"
        android:inputType="date"
        app:layout_constraintTop_toBottomOf="@+id/rvCardNumber"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck,TextContrastCheck"
        tools:layout_editor_absoluteX="14dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/rvCvv"
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:drawableStart="@drawable/ic_baseline_privacy_tip_24"
        android:ems="10"
        android:hint="@string/cvv_number"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvExpireDate"
        tools:ignore="TextContrastCheck,TextContrastCheck"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnsend"
        android:layout_width="382dp"
        android:layout_height="56dp"
        android:layout_marginTop="104dp"
        android:background="@drawable/button_main"
        android:text="@string/pay_now"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvCvv" />

</androidx.constraintlayout.widget.ConstraintLayout>