<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".import_1">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="350dp"
        android:layout_height="86dp"
        android:layout_marginTop="420dp"
        android:gravity="center"
        android:text="@string/we_offer_a_3_step_booking_which_solves_your_problem_quickly_and_easily"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="324dp"
        android:gravity="center"
        android:text="@string/quick_and_easy_booking"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="410dp"
        android:layout_height="317dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/feature_1_1"
        android:contentDescription="@string/picture_3" />

    <Button
        android:id="@+id/button4"
        android:layout_width="119dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:background="@android:drawable/editbox_background_normal"
        android:text="Skip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Skip" />

    <Button
        android:id="@+id/button3"
        android:layout_width="129dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_main"
        android:text="@string/next"
        android:textCursorDrawable="@drawable/button_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="164dp"
        android:layout_height="14dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="532dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mmmm"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/picture_5" />


</androidx.constraintlayout.widget.ConstraintLayout>