<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".paymentDetails">

    <TextView
        android:id="@+id/paydetails"
        android:layout_width="201dp"
        android:layout_height="65dp"
        android:layout_marginTop="48dp"
        android:text="@string/paymentdetails"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/payfull"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:text="@string/full_payment"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paydetails" />

    <EditText
        android:id="@+id/editTextNumberSigned"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toEndOf="@+id/payfull"
        app:layout_constraintTop_toBottomOf="@+id/paydetails"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="148dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/advance"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payfull" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="157dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberSigned"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="146dp"
        android:layout_height="39dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="56dp"
        android:text="@string/balance"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="157dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints="" />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="53dp"
        android:layout_marginTop="340dp"
        android:background="@drawable/sign_in"
        android:text="@string/conform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paydetails" />

</androidx.constraintlayout.widget.ConstraintLayout>