<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".import_2">

    <Button
        android:id="@+id/button6"
        android:layout_width="119dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:background="@android:drawable/editbox_background_normal"
        android:text="@string/skip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92"
        tools:text="Skip" />

    <Button
        android:id="@+id/button4"
        android:layout_width="117dp"
        android:layout_height="51dp"
        android:layout_marginEnd="72dp"
        android:background="@drawable/button_main"
        android:text="@string/next"
        android:textCursorDrawable="@drawable/button_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.925" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="350dp"
        android:layout_height="86dp"
        android:layout_marginTop="456dp"
        android:gravity="center"
        android:text="@string/all_our_domestic_workers_have_transparent_background_and_are_well_trained"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="360dp"
        android:gravity="center"
        android:text="@string/security_and_professionalism"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="411dp"
        android:layout_height="341dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/feature__1"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="164dp"
        android:layout_height="14dp"
        android:layout_marginTop="564dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/pavigation"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="TODO" />
</androidx.constraintlayout.widget.ConstraintLayout>