<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".import_3">

    <Button
        android:id="@+id/button4"
        android:layout_width="119dp"
        android:layout_height="48dp"
        android:layout_marginStart="68dp"
        android:background="@android:drawable/editbox_background_normal"
        android:text="Skip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.842"
        tools:text="Skip" />

    <Button
        android:id="@+id/button6"
        android:layout_width="107dp"
        android:layout_height="48dp"
        android:layout_marginEnd="72dp"
        android:background="@drawable/button_main"
        android:text="@string/next"
        android:textCursorDrawable="@drawable/button_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.843" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="350dp"
        android:layout_height="86dp"
        android:layout_marginTop="420dp"
        android:gravity="center"
        android:text="@string/we_care_about_every_small_details_to_sastisfy_your_needs_when_you_use_our_service"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="273dp"
        android:layout_height="83dp"
        android:layout_marginTop="308dp"
        android:gravity="center"
        android:text="@string/give_your_home_a_wow_feeling"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="406dp"
        android:layout_height="279dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/feature__2"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="164dp"
        android:layout_height="14dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="520dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:srcCompat="@drawable/newone"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="TODO" />
</androidx.constraintlayout.widget.ConstraintLayout>